--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body{
     margin:  auto;
     display: flex;
     flex-wrap: wrap;
+    perspective: 1000px;
 }
 
 .card{
@@ -25,6 +26,8 @@ body{
     box-shadow: 1px 1px 1px  rgba(1,1,1,0.3);
     cursor: pointer;
     transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform 0.9s;
 }
 
 
@@ -42,10 +45,22 @@ body{
     position: absolute;
     border-radius: 5px;
     background: #ffffff;
+    backface-visibility: hidden;
     
 }
 
 
+.card-front{
+    transform: rotateY(180deg);
+
+}
+
+/* Flip card animation */
+
+
+.card.flip{
+    transform: rotateY(180deg);
+}
 
 
 
